--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
       </header>
       <main class="content">
         <section class="recipes" id="recipes">
-          <h2 class="recipe__title">Recipes</h2>
-          <p class="recipe__subtitle">
+          <h1 class="recipes__title">Recipes</h1>
+          <p class="recipes__subtitle">
             Check out some recipes we've collected for your home-brewing
             convenience:
           </p>
-          <ul class="recipe__videos">
+          <ul class="recipes__videos">
             <li>
               <iframe
                 class="recipes__iframe"
@@ -101,7 +101,7 @@
             </li>
           </ul>
         </section>
-        <section class="reservation" id="reservation"></section>
+        <section class="reservation" id="reservations"></section>
         <section class="menu" id="menu"></section>
         <section class="about" id="about"></section>
       </main>
