--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="sentence 1. sentence 2." />
     <title>Coffee Shop</title>
     <link rel="stylesheet" href="./pages/index.css" />
-    <link rel="stylesheet" href="./favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -59,7 +59,7 @@
             <p class="header__paragraph">Monday – Friday (10:00 – 19:00)</p>
             <p class="header__paragraph">Saturday – Sunday (11:00 – 18:00)</p>
           </div>
-          <p class="header__paragraph header__paragraph_address">
+          <p class="header__paragraph">
             200 Success Avenue, The Town of Triple Peaks
           </p>
         </div>
@@ -146,7 +146,7 @@
                 />
               </label>
             </fieldset>
-            <button class="form__button">Book a table</button>
+            <button class="form__button" type="submit">Book a table</button>
             <label
               for="tos-checkbox"
               class="form__label form__label_type_checkbox"
